# RP2040_USBHID_Ambient-Light-Sensor

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  als_hid_sensor.h  als_hid_sensor.wara  auto_brightness.sh  auto_brightness_KDE.sh  auto_brightness_ddcutil.sh  build.sh  main.c  rust_bindings.h  tusb_config.h  usb_descriptors.c
.cargo/: config.toml
CircuitPython/: boot.py  code.py
als_rust_lib/: Cargo.toml
als_rust_lib/src/: lib.rs  main.rs  tinyusb.rs  types.rs
src/: main.rs  types.rs
