[package]
name = "als_rust_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", features = ["device"] }
usb-device = "0.3.2"
usbd-hid = "0.10.0"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
waveshare-rp2040-zero = "0.8.0"
ws2812-pio = "=0.8.0"
smart-leds-trait = "=0.2.1"
usbd-serial = "0.2.2"
